update tests for tables

--- a/test/fixtures/runthrough.html
+++ b/test/fixtures/runthrough.html
@@ -110,7 +110,7 @@ console.log(foo(5));
 
 
 
-<table><thead><tr><th>Tag</th><th>Use</th></tr></thead><tbody><tr><td>p</td><td>Paragraph</td></tr><tr><td>table</td><td>Table</td></tr><tr><td>em</td><td>Emphasis</td></tr></tbody></table>
+<table><thead><tr><th style="text-align:none">Tag</th><th style="text-align:none">Use</th></tr></thead><tbody><tr><td style="text-align:none">p</td><td style="text-align:none">Paragraph</td></tr><tr><td style="text-align:none">table</td><td style="text-align:none">Table</td></tr><tr><td style="text-align:none">em</td><td style="text-align:none">Emphasis</td></tr></tbody></table>
 <p>Left/right aligned columns</p>
 
 
