--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
 <meta name=viewport content=width=device-width,initial-scale=1>
 <meta name=description content="Markdown component for React">
 <meta property=og:description content="Markdown component for React">
-<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.60.0/codemirror.min.css>
-<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.60.0/theme/nord.min.css>
-<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/github.min.css>
-<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/4.0.0/github-markdown.min.css>
+<link rel=stylesheet href=https://esm.sh/@wooorm/starry-night@1/style/both.css>
+<link rel=stylesheet href=https://esm.sh/github-markdown-css@5/github-markdown.css>
+<!-- To do: remove when `react-markdown` supports async plugins and we can use starry-night -->
+<link rel=stylesheet href=https://esm.sh/highlight.js@11/styles/github.min.css>
 <link rel=stylesheet href=index.css>
 <a href=https://github.com/remarkjs/react-markdown class=github-corner aria-label="View project on GitHub">
   <svg
@@ -35,7 +35,5 @@
   <h1 class=page-header>react-markdown</h1>
   <main></main>
 </div>
-<script src=https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.2/codemirror.min.js></script>
-<script src=https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.2/mode/markdown/markdown.min.js></script>
 <script type=module src=index.module.js></script>
 <script nomodule src=index.nomodule.js></script>
