--- a/test/fixtures/runthrough.html
+++ b/test/fixtures/runthrough.html
@@ -152,10 +152,10 @@ can be useful too.</p>
 <p>Some characters, like æ, &amp; and similar should be handled properly.</p>
 <h2>HTML</h2>
 <p>Does anyone actually like the fact that you can embed HTML in markdown?</p>
-<iframe src="https://foo.bar/" width="640" height="480">
-We used to have a known bug where inline HTML wasn&#x27;t handled well. You can do basic tags like
-code</iframe>, as long as it doesn&#x27;t contain any <span class="attrs">attributes</span>. If you
+<iframe src="https://foo.bar/" width="640" height="480"></iframe>
+<p>We used to have a known bug where inline HTML wasn&#x27;t handled well. You can do basic tags like
+<code>code</code>, as long as it doesn&#x27;t contain any <span class="attrs">attributes</span>. If you
 have weird ordering on your tags, it won&#x27;t work either. It does support <strong>nested
-<em>tags</em>, however</strong>. And with the <code class="name">rehype-raw</code> plugin, it can now properly handle HTML! Which is pretty sweet.<p></p>
+<em>tags</em>, however</strong>. And with the <code class="name">rehype-raw</code> plugin, it can now properly handle HTML! Which is pretty sweet.</p>
 <hr/><hr/>
 <p>Cool, eh?</p>
