--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <link rel=stylesheet href=https://esm.sh/@wooorm/starry-night@1/style/both.css>
 <link rel=stylesheet href=https://esm.sh/github-markdown-css@5/github-markdown.css>
 <!-- To do: remove when `react-markdown` supports async plugins and we can use starry-night -->
-<link rel=stylesheet href=https://esm.sh/highlight.js@11/styles/github.min.css>
+<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css>
 <link rel=stylesheet href=index.css>
 <a href=https://github.com/remarkjs/react-markdown class=github-corner aria-label="View project on GitHub">
   <svg
